--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "test:headless": "nx test --watch=false --browsers=ChromeHeadless",
+    "build:prod": "nx build --configuration production"
   },
   "private": true,
   "dependencies": {
